Basic styling added

--- a/templates/home.html
+++ b/templates/home.html
@@ -1,4 +1,12 @@
 <!DOCTYPE html>
 <html>
-    <h1>Mileage Tracker</h1>
+<head>
+    <link rel="stylesheet" type="text/css" href="static/main.css" media="screen" />
+</head> 
+<body>
+    <!--CSS Styling: https://www.studytonight.com/css-howtos/how-to-style-a-header-using-css#:~:text=To%20customize%20the%20header%20elements,header%20components%20and%20so%20on.-->
+    <div class="header">
+        <h1>Motorcycle Mileage Tracker</h1>
+    </div>
+</body>
 </html>
