Getting and printing values for simple vehicle and mileage forms

--- a/templates/home.html
+++ b/templates/home.html
@@ -8,5 +8,14 @@
     <div class="header">
         <h1>Motorcycle Mileage Tracker</h1>
     </div>
+    <div class="mileage_form">
+        <form method="post">
+            Vehicle: <input name="vehicle"/>
+            <br/><br/>
+            Current Mileage: <input name="mileage"/>
+            <br/><br/>
+            <button type="submit">Submit</button>
+        </form>
+    </div>
 </body>
 </html>
