Added form for phone # and email

--- a/mileage_tracker/templates/auth/register.html
+++ b/mileage_tracker/templates/auth/register.html
@@ -10,6 +10,10 @@
     <input name="username" id="username" required>
     <label for="password">Password</label>
     <input type="password" name="password" id="password" required>
+    <label for="email">Email</label>
+    <input name="email" id="email" required>
+    <label for="phone_number">Phone Number</label>
+    <input name="phone_number" id="phone_number" required>
     <input type="submit" value="Register">
   </form>
 {% endblock %}
