--- a/mileage_tracker/templates/vehicle/create.html
+++ b/mileage_tracker/templates/vehicle/create.html
@@ -18,6 +18,10 @@
     <input name="model" id="model" required>
     <label for="miles">Mileage</label>
     <input name="miles" id="miles" required>
+    <label for="oil">Oil Change Interval</label>
+    <input name="oil" id="oil" required>
+    <label for="brakes">Brake Change Interval</label>
+    <input name="brakes" id="brakes" required>
     <input type="submit" value="Register Vehicle">
   </form>
 {% endblock %}
